transaction/hold audit field testing